--- a/index.html
+++ b/index.html
@@ -1134,6 +1134,16 @@ window.onload = async function() {
     }
 };
 </script>
+<script>
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', function() {
+    navigator.serviceWorker.register('service-worker.js')
+      .then(reg => console.log('Service Worker registrado', reg))
+      .catch(err => console.log('Error registrando Service Worker', err));
+  });
+}
+</script>
 
 </body>
 </html>
+
