--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -1044,46 +1045,57 @@ function guardarDB() {
     localStorage.setItem('db', str);
 }
 
+// Registrar usuario
 function registrar() {
-    let form = new FormData();
-    form.append("usuario", document.getElementById("regUser").value);
-    form.append("password", document.getElementById("regPass").value);
+    const usuario = document.getElementById('regUser').value.trim();
+    const contrasena = document.getElementById('regPass').value.trim();
+    const msgElement = document.getElementById('regMsg');
 
-    fetch("registro.php", {
-        method: "POST",
-        body: form
-    })
-    .then(r => r.text())
-    .then(data => {
-        if (data === "OK") {
-            document.getElementById("regMsg").innerHTML = "Usuario registrado";
-        } else {
-            document.getElementById("regMsg").innerHTML = "Error al registrar";
-        }
-    });
+    if (!usuario || !contrasena) {
+        msgElement.textContent = 'Por favor, completa todos los campos';
+        msgElement.className = 'msg error';
+        return;
+    }
+
+    try {
+        db.run('INSERT INTO usuarios (usuario, contrasena) VALUES (?, ?)', [usuario, contrasena]);
+        guardarDB();
+        msgElement.textContent = 'Usuario registrado correctamente';
+        msgElement.className = 'msg success';
+        setTimeout(() => mostrarSeccion('login'), 1500);
+    } catch(e) {
+        msgElement.textContent = 'Este usuario ya existe';
+        msgElement.className = 'msg error';
+    }
+
+    document.getElementById('regUser').value = '';
+    document.getElementById('regPass').value = '';
 }
 
-
+// Login
 function login() {
-    let form = new FormData();
-    form.append("usuario", document.getElementById("loginUser").value);
-    form.append("password", document.getElementById("loginPass").value);
+    const usuario = document.getElementById('loginUser').value.trim();
+    const contrasena = document.getElementById('loginPass').value.trim();
+    const msgElement = document.getElementById('loginMsg');
 
-    fetch("login.php", {
-        method: "POST",
-        body: form
-    })
-    .then(r => r.text())
-    .then(data => {
-        if (data === "OK") {
-            mostrarSeccion('menu');
-            document.getElementById("nombreUsuario").innerText = document.getElementById("loginUser").value;
-        } else {
-            document.getElementById("loginMsg").innerHTML = "Usuario o contraseña incorrectos";
-        }
-    });
+    if (!usuario || !contrasena) {
+        msgElement.textContent = 'Por favor, completa todos los campos';
+        msgElement.className = 'msg error';
+        return;
+    }
+
+    const stmt = db.prepare('SELECT * FROM usuarios WHERE usuario = ? AND contrasena = ?');
+    stmt.bind([usuario, contrasena]);
+
+    if (stmt.step()) {
+        localStorage.setItem('sesion', usuario);
+        mostrarSeccion('menu');
+    } else {
+        msgElement.textContent = 'Usuario o contraseña incorrectos';
+        msgElement.className = 'msg error';
+    }
+    stmt.free();
 }
-
 
 // Cerrar sesión
 function cerrarSesion() {
@@ -1134,6 +1146,7 @@ window.onload = async function() {
     }
 };
 </script>
+
 <script>
 if ('serviceWorker' in navigator) {
   window.addEventListener('load', function() {
@@ -1146,4 +1159,3 @@ if ('serviceWorker' in navigator) {
 
 </body>
 </html>
-
